@@ -41,6 +41,7 @@ import java.sql.ResultSet;
 import java.sql.ResultSetMetaData;
 import java.sql.SQLException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
@@ -51,7 +52,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 import net.sf.jasperreports.engine.JRException;
 import net.sf.jasperreports.engine.JRField;
 import org.apache.commons.lang3.StringUtils;
@@ -255,12 +255,12 @@ public class ListGrid implements Grid, Serializable {
 
   @Override
   public List<GridHeader> getVisibleHeaders() {
-    return headers.stream().filter(h -> !h.isHidden()).collect(Collectors.toList());
+    return headers.stream().filter(h -> !h.isHidden()).toList();
   }
 
   @Override
   public List<GridHeader> getMetadataHeaders() {
-    return headers.stream().filter(GridHeader::isMeta).collect(Collectors.toList());
+    return headers.stream().filter(GridHeader::isMeta).toList();
   }
 
   @Override
@@ -276,7 +276,7 @@ public class ListGrid implements Grid, Serializable {
   @Override
   @JsonProperty
   public int getHeight() {
-    return grid != null && grid.size() > 0 ? grid.size() : 0;
+    return grid != null && !grid.isEmpty() ? grid.size() : 0;
   }
 
   @Override
@@ -284,7 +284,7 @@ public class ListGrid implements Grid, Serializable {
   public int getWidth() {
     verifyGridState();
 
-    return grid != null && grid.size() > 0 ? grid.get(0).size() : 0;
+    return grid != null && !grid.isEmpty() ? grid.get(0).size() : 0;
   }
 
   @Override
@@ -346,7 +346,7 @@ public class ListGrid implements Grid, Serializable {
   public int getVisibleWidth() {
     verifyGridState();
 
-    return grid != null && grid.size() > 0 ? getVisibleRows().get(0).size() : 0;
+    return grid != null && !grid.isEmpty() ? getVisibleRows().get(0).size() : 0;
   }
 
   @Override
@@ -382,9 +382,7 @@ public class ListGrid implements Grid, Serializable {
   public Grid addValues(Object[] values) {
     List<Object> row = grid.get(currentRowWriteIndex);
 
-    for (Object value : values) {
-      row.add(value);
-    }
+    row.addAll(Arrays.asList(values));
 
     return this;
   }
@@ -448,7 +446,7 @@ public class ListGrid implements Grid, Serializable {
 
     List<List<Object>> tempGrid = new ArrayList<>();
 
-    if (headers != null && headers.size() > 0) {
+    if (headers != null && !headers.isEmpty()) {
       for (List<Object> row : grid) {
         List<Object> tempRow = new ArrayList<>();
 
@@ -536,7 +534,7 @@ public class ListGrid implements Grid, Serializable {
   @Override
   public Grid addAndPopulateColumnsBefore(
       int referenceColumnIndex, Map<Object, List<?>> valueMap, int newColumns) {
-    Validate.inclusiveBetween(0, getWidth() - 1, referenceColumnIndex);
+    Validate.inclusiveBetween(0, getWidth() - 1L, referenceColumnIndex);
     Objects.requireNonNull(valueMap);
     verifyGridState();
 
@@ -590,7 +588,7 @@ public class ListGrid implements Grid, Serializable {
   public Grid removeColumn(int columnIndex) {
     verifyGridState();
 
-    if (headers.size() > 0) {
+    if (!headers.isEmpty()) {
       headers.remove(columnIndex);
     }
 
@@ -790,7 +788,7 @@ public class ListGrid implements Grid, Serializable {
   }
 
   @Override
-  public Grid substituteMetaData(Map<? extends Object, ? extends Object> metaDataMap) {
+  public Grid substituteMetaData(Map<?, ?> metaDataMap) {
     if (metaDataMap == null || headers == null || headers.isEmpty()) {
       return this;
     }
@@ -818,9 +816,7 @@ public class ListGrid implements Grid, Serializable {
 
   @Override
   public Grid substituteMetaData(
-      int sourceColumnIndex,
-      int targetColumnIndex,
-      Map<? extends Object, ? extends Object> metaDataMap) {
+      int sourceColumnIndex, int targetColumnIndex, Map<?, ?> metaDataMap) {
     if (metaDataMap == null) {
       return this;
     }
@@ -1013,10 +1009,10 @@ public class ListGrid implements Grid, Serializable {
     while (rs.next()) {
       addRow();
 
-      for (int i = 0; i < cols.length; i++) {
-        if (headerExists(cols[i])) {
-          addValue(rs.getObject(cols[i]));
-          headersSet.add(cols[i]);
+      for (String col : cols) {
+        if (headerExists(col)) {
+          addValue(rs.getObject(col));
+          headersSet.add(col);
         }
       }
     }
@@ -1174,7 +1170,7 @@ public class ListGrid implements Grid, Serializable {
   public String toString() {
     StringBuilder builder = new StringBuilder("[\n");
 
-    if (headers != null && headers.size() > 0) {
+    if (headers != null && !headers.isEmpty()) {
       List<String> headerNames = new ArrayList<>();
 
       for (GridHeader header : headers) {
@@ -1196,9 +1192,9 @@ public class ListGrid implements Grid, Serializable {
   // -------------------------------------------------------------------------
 
   public static class GridRowComparator implements Comparator<List<Object>> {
-    private int columnIndex;
+    private final int columnIndex;
 
-    private int order;
+    private final int order;
 
     protected GridRowComparator(int columnIndex, int order) {
       this.columnIndex = columnIndex;
